# Aster-Learning-Engine

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
abi/: aster_kernel.symbols
apps/game/: main.cpp
apps/material_lab/: main.cpp
apps/net/: probe_main.cpp
apps/offline/: preview_main.cpp
apps/samples/lumen_run/: main.cpp
apps/studio/: main.cpp
assets/sample_scene/normal_tangent_probe/: normal_tangent_probe.scene
crates/aster_assetc/: Cargo.toml
crates/aster_assetc/src/: main.rs
crates/aster_assetc/tests/: cli.rs
crates/aster_content/: Cargo.toml
crates/aster_content/src/: lib.rs
crates/aster_runtime/: Cargo.toml
crates/aster_runtime/src/: lib.rs
docs/: ARCHITECTURE.md  ENGINE_KERNEL.md  LUMEN_RUN_AS_SAMPLE.md  MATERIALS_AND_SHADERS.md  PRODUCT_PATH.md  RENDERER_BACKEND_MATRIX.md  RENDERING_PIPELINE.md  RESEARCH_NOTES.md  SCENE_AND_MESH_PIPELINE.md  START_HERE.md  WHAT_ASTER_IS.md
docs/ENGINE_INTERNALS/: ARCHITECTURE.md  ENGINE_KERNEL.md
docs/RESEARCH/: RESEARCH_NOTES.md
include/aster/ai/: behavior_tree.hpp  steering.hpp
include/aster/asset/: asset_database.hpp  asset_factory.hpp  json_document.hpp  mesh_pipeline.hpp  scene_asset_importer.hpp
include/aster/core/: clock.hpp  config.hpp  fixed_timestep.hpp  frame_time_stats.hpp  profiler.hpp  work_budget.hpp
include/aster/framegraph/: frame_graph.hpp  graph_compiler.hpp  graph_visualizer.hpp  pass_builder.hpp  resource_handle.hpp  transient_resource_allocator.hpp
include/aster/game/: animation_system.hpp  creature_motion.hpp  equipment_system.hpp  interaction_system.hpp  inventory_system.hpp  item_system.hpp  lumen_run.hpp  mining_system.hpp  particle_system.hpp  third_person_camera.hpp
include/aster/game_sdk/: game_sdk.hpp
include/aster/geometry/: architectural_mesh.hpp  brush_level_mesh.hpp  cable_mesh.hpp  castle_course.hpp  cave_system.hpp  cave_web_mesh.hpp  energy_conduit_mesh.hpp  fracture_mesh.hpp  generated_scenery.hpp  mesh_cut.hpp  (+11 more)
projects/lumen_run/: lumen_run.asterproj
shaders/lib/: alpha.astsl  brdf.astsl  clearcoat.astsl  color.astsl  debug_views.astsl  detail_normal.astsl  fog.astsl  material_debug.astsl  material_lit_pbr.astsl  math.astsl  normal_mapping.astsl  parallax.astsl  pbr.astsl  tonemap.astsl  triplanar.astsl  wetness.astsl
showcases/lighting_lab/: manifest.md
showcases/material_lab/: manifest.md  material_lab.asterproj  weathered_metal.astermat  wet_rock.astermat  wet_rock_height.ktx2  wet_rock_orm.ktx2
showcases/mesh_lab/: manifest.md
src/ai/: behavior_tree.cpp  steering.cpp
src/asset/: asset_database.cpp  asset_factory.cpp  compiled_scene_asset.cpp  mesh_pipeline.cpp  scene_asset_importer.cpp
src/core/: clock.cpp  fixed_timestep.cpp  frame_time_stats.cpp  profiler.cpp  work_budget.cpp
src/framegraph/: frame_graph.cpp  graph_compiler.cpp  transient_resource_allocator.cpp
src/game/: animation_system.cpp  creature_motion.cpp  equipment_system.cpp  interaction_system.cpp  inventory_system.cpp  item_system.cpp  light_system.cpp  lumen_run.cpp  mining_system.cpp  particle_system.cpp  player_motion.cpp  third_person_camera.cpp
src/game_sdk/: game_sdk.cpp
src/geometry/: architectural_mesh.cpp  brush_level_mesh.cpp  cable_mesh.cpp  castle_course.cpp  cave_system.cpp  cave_web_mesh.cpp  energy_conduit_mesh.cpp  fracture_mesh.cpp  generated_scenery.cpp  implicit_surface.cpp  mesh_cut.cpp  mesh_modeling.cpp  mesh_projection.cpp  nature_mesh.cpp  stroke_mesh.cpp  terrain_mesh.cpp  terrain_sculpt.cpp  tube_mesh.cpp  voxel_cave.cpp  voxel_structure.cpp  water_mesh.cpp
src/input/: control_scheme.cpp
src/kernel/: kernel.cpp
src/material/: material_asset.cpp  material_compiler.cpp  material_graph.cpp  material_instance.cpp  material_parameter_block.cpp
src/math/: transform.cpp
src/net/: net_message.cpp  node_router.cpp  tcp_node.cpp
src/physics/: climb_locomotion.cpp  contact_query.cpp  fluid_locomotion.cpp  physics_world.cpp  placement_validation.cpp  surface_support.cpp  terrain_contact.cpp
src/platform/: frame_presenter.cpp  frame_presenter.hpp  frame_presenter_metal.mm  window.cpp  window_input.cpp  window_input.hpp  window_linux.cpp  window_macos.mm  window_windows.cpp
src/render/: camera.cpp  frame_capture.cpp  material_compiler.cpp  mesh.cpp  native_render_backend.hpp  native_render_backend_null.cpp  native_render_backend_stub.cpp  render_backend_common.cpp  render_backend_common.hpp  render_device.cpp  render_device_d3d12.cpp  render_device_metal.mm  render_graph.cpp  render_graph_executor.cpp  render_quality.cpp  render_scene.cpp  software_framebuffer.cpp  software_preview_renderer.cpp
src/rhi/: resource_lifetime_validator.cpp  resource_registry.cpp
src/samples/: lumen_run.cpp  lumen_run_detail.hpp  lumen_run_interaction.cpp  lumen_run_mining.cpp  lumen_run_scene.cpp  lumen_run_simulation.cpp  lumen_run_validation.cpp  showcase_scenes.cpp
src/scene/: avatar.cpp  scene.cpp  scene_coherence.cpp  scene_trace.cpp
src/shader/: shader_compiler.cpp  shader_hot_reload.cpp  shader_library.cpp  shader_reflection.cpp  shader_variant.cpp
src/systems/: animation_system.cpp  creature_motion.cpp  equipment_system.cpp  interaction_system.cpp  inventory_system.cpp  item_system.cpp  light_system.cpp  mining_system.cpp  particle_system.cpp  player_motion.cpp  third_person_camera.cpp
src/texture/: runtime_texture.cpp  texture_asset.cpp  texture_atlas.cpp  texture_compressor.cpp  texture_debug.cpp  texture_importer.cpp  texture_streamer.cpp
src/ui/: control_legend.cpp  editor_ui.cpp  hud_layer.cpp  inventory_overlay.cpp  ui_canvas.cpp
tests/: asset_cache_tests.cpp  core_tests.cpp  game_sdk_public_consumer.cpp  geometry_tests.cpp  kernel_contract_tests.cpp  kernel_public_consumer.cpp  material_shader_system_tests.cpp  math_property_tests.cpp  math_tests.cpp  network_tests.cpp  physics_tests.cpp  render_backend_conformance_tests.cpp  render_scene_tests.cpp  sample_tests.cpp  systems_tests.cpp  test_support.hpp
tools/: check_kernel_symbols.cmake
(+1430 files in other folders)
